# AI-IM-Guard-ML

./: .gitignore  LICENSE  Makefile  ONBOARDING.md  README.md  README_EN.md  demo.html  pyproject.toml
configs/: default.yaml  experiment_results.yaml  local_fast_full_train.yaml  local_mps_train.yaml  model_registry.yaml  rollout.yaml  rubrics.yaml
deploy/: Dockerfile  audit_service.env.example  audit_service.prod.env.example  docker-compose.example.yml  vllm_serve.sh
docs/: API_USAGE.md  ARCHITECTURE.md  COMMANDS.md  DATA_INGESTION.md  DATA_QUALITY_AND_AUDIT.md  DEEP_DIVE_QA.md  DELIVERY_REPORT.md  DEPLOYMENT_AND_OPERATIONS.md  ENTERPRISE_READINESS_REVIEW.md  FINAL_INTERVIEW_CHECKLIST.md  HUMAN_REVIEW_AND_ROLLOUT.md  INCIDENT_RUNBOOK.md  INTERVIEW_PLAYBOOK.md  INTERVIEW_SPEAKING_SCRIPT.md  LIMITATIONS_AND_ROADMAP.md  LOCAL_ENV_ROOT_CAUSE.md  MODEL_CARD_AND_EXPERIMENT_REPORT.md  MODEL_GOVERNANCE_PLAYBOOK.md  OFFER_DEFENSE_QA.md  OFFER_DEMO_SCRIPT.md  POLICY_CHANGELOG.md  PRODUCTION_SYSTEM_DESIGN.md  PROJECT_FROM_ZERO_TO_ONE.md  PROJECT_INDEX.md  PUBLIC_DATASET_XGUARD.md  RESUME_AND_STORYLINE.md  RISK_STRATEGY.md  RUBRIC_AND_LABELING_GUIDE.md  SLO_AND_ALERTING.md  SOURCE_DOC_COVERAGE.md  TRAINING_AND_EVALUATION.md
scripts/: benchmark_api.py  demo_pipeline.sh  download_xguard_dataset.py
static/: RiskHub.html  dashboard.html
tests/: test_api.py  test_api_contract.py  test_audit_store.py  test_auth.py  test_benchmark_api.py  test_build_dataset.py  test_cli_pipeline.py  test_data_audit.py  test_deployment_templates.py  test_docs_consistency.py  test_evaluation.py  (+11 more)
(+42 files in other folders)
