[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-im-guard-ml"
version = "0.1.0"
description = "Enterprise-grade AI/ML risk auditing framework for IM private-chat moderation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chen Peng" }]
dependencies = []

[project.optional-dependencies]
train = [
  "datasets>=2.18",
  "torch>=2.2",
  "transformers>=4.42",
  "trl>=0.9",
  "peft>=0.11",
]
serve = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pyyaml>=6.0",
]

[project.scripts]
im-guard = "im_guard_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
